[gd_scene load_steps=12 format=2]

[ext_resource path="res://scene/principale/game.gd" type="Script" id=1]
[ext_resource path="res://scene/Tileset/tileset.res" type="TileSet" id=2]
[ext_resource path="res://img/backcover.png" type="Texture" id=3]
[ext_resource path="res://img/down.png" type="Texture" id=4]
[ext_resource path="res://img/left.png" type="Texture" id=5]
[ext_resource path="res://img/right.png" type="Texture" id=6]
[ext_resource path="res://img/up.png" type="Texture" id=7]
[ext_resource path="res://scene/principale/Ubuntu-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://img/ui-area.png" type="Texture" id=9]
[ext_resource path="res://scene/principale/scrumble.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 8 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 2, 0, 0 )

[node name="down" type="TextureButton" parent="." groups=[
"down",
]]
margin_left = 30.5496
margin_top = -80.2505
margin_right = 94.5496
margin_bottom = -16.2505
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="down2" type="TextureButton" parent="." groups=[
"down",
]]
margin_left = 31.3941
margin_top = -163.669
margin_right = 95.3941
margin_bottom = -99.6691
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="left" type="TextureButton" parent="." groups=[
"left",
]]
margin_left = 148.489
margin_top = -85.2708
margin_right = 212.489
margin_bottom = -21.2708
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )

[node name="left2" type="TextureButton" parent="." groups=[
"left",
]]
margin_left = 143.739
margin_top = -158.421
margin_right = 207.739
margin_bottom = -94.4209
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )

[node name="right" type="TextureButton" parent="." groups=[
"right",
]]
margin_left = 264.634
margin_top = -86.741
margin_right = 328.634
margin_bottom = -22.741
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )

[node name="right2" type="TextureButton" parent="." groups=[
"right",
]]
margin_left = 264.634
margin_top = -169.391
margin_right = 328.634
margin_bottom = -105.391
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )

[node name="up" type="TextureButton" parent="." groups=[
"up",
]]
margin_left = 397.685
margin_top = -86.741
margin_right = 461.685
margin_bottom = -22.741
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 7 )

[node name="up2" type="TextureButton" parent="." groups=[
"up",
]]
margin_left = 395.785
margin_top = -166.541
margin_right = 459.785
margin_bottom = -102.541
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 7 )

[node name="winLabel" type="Label" parent="."]
visible = false
margin_right = 725.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
text = "WIN!!!"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 603.0
margin_top = 7.0
margin_right = 722.0
margin_bottom = 164.0
texture = ExtResource( 9 )
region_rect = Rect2( 2, 2, 28, 28 )
patch_margin_left = 24
patch_margin_top = 4
patch_margin_right = 25
patch_margin_bottom = 3

[node name="time" type="Label" parent="."]
margin_left = 607.0
margin_top = 23.0
margin_right = 718.0
margin_bottom = 57.0
text = "Time:
00:00:00"
align = 1
valign = 1

[node name="record" type="Label" parent="."]
margin_left = 607.0
margin_top = 63.0
margin_right = 718.0
margin_bottom = 97.0
text = "Record:
00:00:00"
align = 1
valign = 1

[node name="start" type="Button" parent="."]
margin_left = 609.0
margin_top = 112.795
margin_right = 716.0
margin_bottom = 132.795
text = "START"

[node name="scrumble" type="Button" parent="."]
margin_left = 609.0
margin_top = 137.06
margin_right = 716.0
margin_bottom = 157.06
text = "SCRUMBLE"
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="scrumble"]
wait_time = 2.0
one_shot = true
[connection signal="button_up" from="start" to="." method="_on_start_button_up"]
[connection signal="scrumble" from="scrumble" to="." method="_on_scrumble_scrumble"]
